Arrays &strings/LABs/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:33:05 **** Rebuild of configuration Debug for project Ex1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o l.o "..\\l.c" 
..\l.c:9:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\l.c: In function 'main':
..\l.c:18:20: warning: format '%d' expects argument of type 'int', but argument 2 has type 'double' [-Wformat=]
   printf("student %d degree is %f",degrees[i++]);
                    ^
..\l.c:18:33: warning: format '%f' expects a matching 'double' argument [-Wformat=]
   printf("student %d degree is %f",degrees[i++]);
                                 ^
gcc -o Ex1.exe l.o 
Info: Nothing to build for Ex1
16:34:07 **** Incremental Build of configuration Debug for project Ex1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o l.o "..\\l.c" 
..\l.c:9:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\l.c: In function 'main':
..\l.c:18:23: warning: format '%d' expects argument of type 'int', but argument 2 has type 'double' [-Wformat=]
   printf("\n student %d degree is %f",degrees[i]);
                       ^
..\l.c:18:36: warning: format '%f' expects a matching 'double' argument [-Wformat=]
   printf("\n student %d degree is %f",degrees[i]);
                                    ^
gcc -o Ex1.exe l.o 
Info: Nothing to build for Ex1
16:36:15 **** Incremental Build of configuration Debug for project Ex1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o l.o "..\\l.c" 
..\l.c:9:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\l.c: In function 'main':
..\l.c:18:23: warning: format '%d' expects argument of type 'int', but argument 2 has type 'double' [-Wformat=]
   printf("\n student %d degree is %f",degrees[i]);
                       ^
..\l.c:18:36: warning: format '%f' expects a matching 'double' argument [-Wformat=]
   printf("\n student %d degree is %f",degrees[i]);
                                    ^
gcc -o Ex1.exe l.o 
Info: Nothing to build for Ex1
16:36:52 **** Incremental Build of configuration Debug for project Ex1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o l.o "..\\l.c" 
..\l.c:9:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
gcc -o Ex1.exe l.o 
Info: Nothing to build for Ex1
16:37:19 **** Incremental Build of configuration Debug for project Ex1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o l.o "..\\l.c" 
..\l.c:9:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
gcc -o Ex1.exe l.o 
Info: Nothing to build for Ex1
Info: Nothing to build for Ex1
16:43:39 **** Rebuild of configuration Debug for project Ex2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o r.o "..\\r.c" 
..\r.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
gcc -o Ex2.exe r.o 
Info: Nothing to build for Ex2
Info: Nothing to build for Ex1
Info: Nothing to build for Ex2
17:04:50 **** Rebuild of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\i.c: In function 'main':
..\i.c:21:26: error: expected ')' before ';' token
  printf("the matrix is\n";)
                          ^
..\i.c:22:2: error: expected ';' before 'for'
  for (r=0;r<3;r++){
  ^~~
..\i.c:12:8: warning: unused variable 'y' [-Wunused-variable]
  float y[3][3];
        ^
Info: Nothing to build for Ex1
Info: Nothing to build for Ex2
17:05:07 **** Incremental Build of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\i.c: In function 'main':
..\i.c:24:16: warning: format '%f' expects a matching 'double' argument [-Wformat=]
    printf("%f %f",x[r][c]);
                ^
..\i.c:12:8: warning: unused variable 'y' [-Wunused-variable]
  float y[3][3];
        ^
gcc -o Ex3.exe i.o 
Info: Nothing to build for Ex3
Info: Nothing to build for Ex1
Info: Nothing to build for Ex2
17:06:53 **** Incremental Build of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\i.c: In function 'main':
..\i.c:24:16: warning: format '%f' expects a matching 'double' argument [-Wformat=]
    printf("%f %f",x[r][c]);
                ^
..\i.c:12:8: warning: unused variable 'y' [-Wunused-variable]
  float y[3][3];
        ^
gcc -o Ex3.exe i.o 
Info: Nothing to build for Ex3
Info: Nothing to build for Ex1
Info: Nothing to build for Ex2
17:07:34 **** Incremental Build of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\i.c: In function 'main':
..\i.c:24:20: warning: format '%f' expects a matching 'double' argument [-Wformat=]
    printf("%.2f %.2f",x[r][c]);
                    ^
..\i.c:12:8: warning: unused variable 'y' [-Wunused-variable]
  float y[3][3];
        ^
gcc -o Ex3.exe i.o 
Info: Nothing to build for Ex3
Info: Nothing to build for Ex1
Info: Nothing to build for Ex2
17:08:59 **** Incremental Build of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\i.c: In function 'main':
..\i.c:12:8: warning: unused variable 'y' [-Wunused-variable]
  float y[3][3];
        ^
gcc -o Ex3.exe i.o 
Info: Nothing to build for Ex3
Info: Nothing to build for Ex1
Info: Nothing to build for Ex2
17:09:22 **** Incremental Build of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
..\i.c: In function 'main':
..\i.c:12:8: warning: unused variable 'y' [-Wunused-variable]
  float y[3][3];
        ^
gcc -o Ex3.exe i.o 
Info: Nothing to build for Ex3
Info: Nothing to build for Ex1
Info: Nothing to build for Ex2
17:14:10 **** Incremental Build of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
gcc -o Ex3.exe i.o 
17:14:19 **** Incremental Build of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
gcc -o Ex3.exe i.o 
Info: Nothing to build for Ex1
Info: Nothing to build for Ex2
17:15:03 **** Incremental Build of configuration Debug for project Ex3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o i.o "..\\i.c" 
..\i.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(){
      ^~~~
gcc -o Ex3.exe i.o 
Info: Nothing to build for Ex3
